[tool.poetry]
name = "img-fusion"
version = "0.1.0"
description = ""
authors = ["Rachel Park <rachelsupark@gmail.com>"]
readme = "README.md"
packages = [{include = "img_fusion"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
modal-client = "^0.49.2010"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
